Refactored Gerridae Rspec tests, moved several methods to Helpers module, added and moved related tests to new Helpers spec file.

--- a/README.ad
+++ b/README.ad
@@ -6,7 +6,7 @@ Gerridae is a basic web crawler, which can be configured to operate on a support
 
 Currently, Gerridae is meant to become a basic web crawler that can create and log HTTP requests. Additionally, parsing and analyzing HTML files is planned as a feature.
 
-If you wish to contribute, grab a copy, write it up, and send a pull request. Help is always appreciated! Send me a message here or at my email Schaefer.Austin.P@gmail.com if you have any questions. 
+If you wish to contribute, grab a copy, write it up, and send a pull request. Help is always appreciated! Send me a message here or at my email Schaefer.Austin@tutanota.com if you have any questions. 
 
 == Installation & Configuration ==
 
